# BepInExModManager

./: .gitignore  FEATURES.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bepinex.rs  config.rs  game.rs  mod.rs  mods.rs
src/api/: index.ts
src/assets/: main.css
src/components/layout/: AppSidebar.vue  AppTitleBar.vue  AppTopBar.vue
src/components/ui/: BaseBadge.vue  BaseButton.vue  BaseInput.vue  BaseModal.vue  BaseSelect.vue  BaseToggle.vue
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: BepInExPage.vue  GameConfigPage.vue  GameDetailPage.vue  HomePage.vue  ModConfigPage.vue  SettingsPage.vue
src/router/: index.ts
src/store/: gameStore.ts  modStore.ts  settingsStore.ts
src/types/: index.ts
website/: index.html  package.json  pnpm-lock.yaml
website/src/: App.vue  style.css
website/src/components/: FeaturesSection.vue  FooterSection.vue  HeroSection.vue  HowToSection.vue  NavBar.vue  ScreenshotsSection.vue  TechStackSection.vue
