[package]
name = "bepinexmodmanager"
version = "1.0.0"
description = "BepInEx Mod Manager"
authors = ["small-lizi"]
edition = "2021"

[lib]
name = "bepinexmodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-http    = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "stream"] }
zip        = "2"
futures-util = "0.3"
image = { version = "0.25.9", default-features = false, features = ["png", "ico"] }
base64 = "0.22.1"
